--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ axum = { version = "0.7.5", features = ["ws"] }
 futures-util = "0.3.30"
 hex = "0.4.3"
 hex-literal = "0.4.1"
+rand = "0.8.5"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.118"
